src/test/ui/const-generics/issues/issue-62456.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/issue-62456.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: array lengths can't depend on generic parameters
  --> $DIR/issue-62456.rs:5:20
   |
LL |     let _ = [0u64; N + 1];
   |                    ^^^^^

error: aborting due to previous error

